--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,19 +3,39 @@ name: Versionamento Automático HTML/CSS
 on:
   push:
     branches:
-      - main   
+      - main
 
 jobs:
-  bump-version:
+  bump-tag:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Bump version and push tag
-        uses: phips28/gh-action-bump-version@v9
-        with:
-          tag-prefix: "v"           # tags ficarão v1.0.0, v1.0.1 etc.
+      - name: Configurar Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Obter última tag
+        id: get_tag
+        run: |
+          LAST_TAG=$(git describe --tags --abbrev=0 || echo "v0.0.0")
+          echo "LAST_TAG=$LAST_TAG" >> $GITHUB_ENV
+
+      - name: Calcular nova tag
+        id: calc_tag
+        run: |
+          IFS='.' read -r MAJOR MINOR PATCH <<< "${LAST_TAG#v}"
+          PATCH=$((PATCH + 1))
+          NEW_TAG="v$MAJOR.$MINOR.$PATCH"
+          echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
+          echo "Nova tag: $NEW_TAG"
+
+      - name: Criar tag no Git
+        run: |
+          git tag $NEW_TAG
+          git push origin $NEW_TAG
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
