--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,18 +17,19 @@ jobs:
       # 2️⃣ Configura Git para commits feitos pelo Actions
       - name: Configurar Git
         run: |
-          git config user.name "Seu Nome"   # Coloque seu nome
-          git config user.email "seu-email@github.com" # Coloque seu email
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      # 3️⃣ Obter a maior tag existente
+      # 3️⃣ Obter a maior tag existente >= v1.0.0
       - name: Obter maior tag existente
         id: get_tag
         run: |
-          TAGS=$(git tag --list 'v*' | sed 's/v//')
+          # Lista todas as tags que começam com v e são >= v1.0.0
+          TAGS=$(git tag --list 'v*' | grep -E '^v[1-9][0-9]*\.[0-9]+\.[0-9]+$' | sed 's/v//')
           if [ -z "$TAGS" ]; then
-            LAST_TAG="v0.0.0"
+            LAST_TAG="v1.0.0"
           else
-            # Ordena as tags numericamente e pega a maior
+            # Ordena numericamente e pega a maior
             LAST_TAG=$(echo "$TAGS" | sort -t. -k1,1n -k2,2n -k3,3n | tail -1)
             LAST_TAG="v$LAST_TAG"
           fi
@@ -50,10 +51,8 @@ jobs:
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
           echo "Nova tag a ser criada: $NEW_TAG"
 
-      # 5️⃣ Criar tag e push usando seu token GH_TOKEN
+      # 5️⃣ Criar tag e push usando token interno do Actions
       - name: Criar tag no GitHub
         run: |
           git tag $NEW_TAG
-          git push https://$GH_TOKEN@github.com/${{ github.repository }} $NEW_TAG
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} $NEW_TAG
