--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout
+      # 1️⃣ Checkout do código
       - name: Checkout do código
         uses: actions/checkout@v4
 
@@ -20,7 +20,7 @@ jobs:
           git config user.name "Vanessa-Nobrega"
           git config user.email "vanessacapuano1@gmail.com"
 
-      # 3️⃣ Obter a maior tag existente
+      # 3️⃣ Obter maior tag existente
       - name: Obter maior tag existente
         id: get_tag
         run: |
@@ -41,6 +41,7 @@ jobs:
           IFS='.' read -r MAJOR MINOR PATCH <<< "${LAST_TAG#v}"
           PATCH=$((PATCH + 1))
           NEW_TAG="v$MAJOR.$MINOR.$PATCH"
+          # garante que a tag seja única
           while git rev-parse "$NEW_TAG" >/dev/null 2>&1; do
             PATCH=$((PATCH + 1))
             NEW_TAG="v$MAJOR.$MINOR.$PATCH"
@@ -48,10 +49,12 @@ jobs:
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
           echo "Nova tag a ser criada: $NEW_TAG"
 
-      # 5️⃣ Criar tag e push usando GH_TOKEN
-      - name: Criar tag no GitHub
+      # 5️⃣ Criar tag e push usando GH_TOKEN (PAT)
+      - name: Criar tag e push usando GH_TOKEN
         run: |
+          # Autenticação com seu token pessoal
+          git remote set-url origin https://Vanessa-Nobrega:${{ secrets.GH_TOKEN }}@github.com/Vanessa-Nobrega/Projeto_IEC.git
           git tag $NEW_TAG
-          git push https://Vanessa-Nobrega:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }} $NEW_TAG
+          git push origin $NEW_TAG
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
