--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,13 +14,13 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      # 2️⃣ Configurar Git com seu usuário e email
+      # 2️⃣ Configurar Git com usuário do bot
       - name: Configurar Git
         run: |
-          git config user.name "Vanessa-Nobrega"
-          git config user.email "vanessacapuano1@gmail.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      # 3️⃣ Obter maior tag existente
+      # 3️⃣ Obter a maior tag existente
       - name: Obter maior tag existente
         id: get_tag
         run: |
@@ -41,7 +41,6 @@ jobs:
           IFS='.' read -r MAJOR MINOR PATCH <<< "${LAST_TAG#v}"
           PATCH=$((PATCH + 1))
           NEW_TAG="v$MAJOR.$MINOR.$PATCH"
-          # garante que a tag seja única
           while git rev-parse "$NEW_TAG" >/dev/null 2>&1; do
             PATCH=$((PATCH + 1))
             NEW_TAG="v$MAJOR.$MINOR.$PATCH"
@@ -49,12 +48,8 @@ jobs:
           echo "NEW_TAG=$NEW_TAG" >> $GITHUB_ENV
           echo "Nova tag a ser criada: $NEW_TAG"
 
-      # 5️⃣ Criar tag e push usando GH_TOKEN (PAT)
-      - name: Criar tag e push usando GH_TOKEN
+      # 5️⃣ Criar tag e push usando o GITHUB_TOKEN (funciona sem 403)
+      - name: Criar tag no GitHub
         run: |
-          # Autenticação com seu token pessoal
-          git remote set-url origin https://Vanessa-Nobrega:${{ secrets.GH_TOKEN }}@github.com/Vanessa-Nobrega/Projeto_IEC.git
           git tag $NEW_TAG
-          git push origin $NEW_TAG
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} $NEW_TAG
